// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`n-auto-logger autoLog should invoke autoLogged async callFunction correctly 1`] = `
Array [
  Array [
    Object {
      "test": "a",
    },
    Object {
      "meta": "b",
    },
  ],
]
`;

exports[`n-auto-logger autoLog should invoke non-async callFunction correctly 1`] = `
Array [
  Array [
    Object {
      "test": "a",
    },
    Object {
      "meta": "b",
    },
  ],
]
`;

exports[`n-auto-logger autoLog should log async callFunction failure correctly and throw the original exception 1`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "bar",
      "meta": "b",
      "result": "failure",
      "test": "a",
    },
  ],
]
`;

exports[`n-auto-logger autoLog should log async callFunction success correctly 1`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "meta": "b",
      "test": "a",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "meta": "b",
      "result": "success",
      "test": "a",
    },
  ],
]
`;

exports[`n-auto-logger autoLog should log error if input arg meta is specified but not an Object 1`] = `"check the args format of autoLogged function [callFunction], it needs to be (params: Object, meta: Object), documents: https://github.com/Financial-Times/n-auto-logger/blob/master/README.md#function-args-format"`;

exports[`n-auto-logger autoLog should log error if input arg params is not an Object 1`] = `"check the args format of autoLogged function [callFunction], it needs to be (params: Object, meta: Object), documents: https://github.com/Financial-Times/n-auto-logger/blob/master/README.md#function-args-format"`;

exports[`n-auto-logger autoLog should log non-async callFunction failure correctly and throw the original exception 1`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "bar",
      "meta": "b",
      "result": "failure",
      "test": "a",
    },
  ],
]
`;

exports[`n-auto-logger autoLog should log non-async callFunction success correctly 1`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "meta": "b",
      "test": "a",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "meta": "b",
      "result": "success",
      "test": "a",
    },
  ],
]
`;

exports[`n-auto-logger autoLog should throw error if there're more than 2 args 1`] = `"check the args format of autoLogged function [callFunction], it needs to be (params: Object, meta: Object), documents: https://github.com/Financial-Times/n-auto-logger/blob/master/README.md#function-args-format"`;

exports[`n-auto-logger loggerEvent failure method should log system Error correctly 1`] = `
Object {
  "a": "test",
  "b": "test",
  "category": "NODE_SYSTEM_ERROR",
  "message": "some error message",
  "operation": "test",
  "result": "failure",
  "transactionId": "test",
  "userId": "test",
}
`;

exports[`n-auto-logger loggerEvent should NOT ignore data put under user field 1`] = `
Array [
  Array [
    Object {
      "a": "test",
      "b": "test",
      "operation": "test",
      "transactionId": "test",
      "userId": "test",
    },
  ],
]
`;
